# wolfimporter

./: .gitignore  .gitmodules  CMakeLists.txt  HOW_TO_EXPORT_OBJ  example.cpp  fuhrercube.blend
Resources/json/: default.cameras.json  default.configuration.json  default.primitives.json  default.resources.json  default.sandbox.json  default.scene.json
Samples/: CMakeLists.txt  example.cpp  fuhrercube.mtl
include/wolf/: filesystemutils.hpp  id.hpp  maputils.hpp  vectorutils.hpp  wolf.hpp
include/wolf/ecs/: ecsnode.hpp  entity.hpp  scene.hpp  scenebuilder.cpp  scenebuilder.hpp
include/wolf/ecs/component/: component.hpp  component_kinematic.hpp  component_mesh.hpp  component_name.hpp  component_orientation.hpp  componentfactory.hpp
include/wolf/ecs/entity/: entity.hpp  entityfactory.hpp
include/wolf/engine/: clipparser.hpp  engine.hpp  entity.hpp  gamemanager.hpp  id.hpp  resourcemanager.hpp  sandboxmapper.hpp  scene.hpp
include/wolf/engine/ecs/: component.hpp  entity.hpp
include/wolf/engine/ecs/component/: component_mesh.hpp  component_name.hpp
include/wolf/engine/resources/: resource.hpp  resourcemanager.hpp  resourcemesh.hpp  resourcenameutils.hpp
include/wolf/file/: file.hpp
include/wolf/glfw/: glfw.hpp
include/wolf/gui/: gui.hpp
include/wolf/import/: parser.hpp  parser_obj.hpp  resourceimporter.hpp  resourceloader.hpp  wavefrontutils.hpp
include/wolf/import/_3dformats/: _3dfileparser.hpp  _3dmateriallibraryfile.hpp  file.hpp  mtlfileparser.hpp  objfileparser.hpp
include/wolf/import/resources/: importer.hpp  resourceloader_json.hpp
include/wolf/pttrns/: flyweight.hpp  singleton.hpp
include/wolf/renderer/: instance.hpp  renderer.hpp  shader.hpp  vao.hpp
include/wolf/resources/: resource.hpp  resourcefactory.hpp  resourcejson.hpp  resourcemanager.hpp  resourcemesh.hpp
include/wolf/resources/json/: resourcejson.hpp  resourcejsonvisitor.cpp  resourcejsonvisitor.hpp
include/wolf/utils/: filesystemutils.hpp  stringutils.hpp  vectorutils.hpp  wavefrontutils.hpp
src/: CMakeLists.txt
src/wolf/: filesystemutils.cpp  id.cpp  maputils.cpp  stringutils.cpp  vectorutils.cpp
src/wolf/ecs/: ecsnode.cpp
src/wolf/ecs/component/: component.cpp  component_kinematic.cpp  component_mesh.cpp  component_name.cpp  component_orientation.cpp  componentfactory.cpp
src/wolf/ecs/entity/: entityfactory.cpp
src/wolf/engine/: cliparser.cpp  engine.cpp  id.cpp  resourcemanager.cpp  sandboxmapper.cpp  scene.cpp
src/wolf/engine/ecs/: component.cpp
src/wolf/engine/ecs/component/: component_mesh.cpp  component_name.cpp
src/wolf/engine/resources/: resource.cpp  resourcemanager.cpp  resourcemesh.cpp  resourcenameutils.cpp
src/wolf/file/: file.cpp
src/wolf/glfw/: glfw.cpp
src/wolf/gui/: gui.cc  gui.cpp
src/wolf/import/: parser_obj.cpp  parser_obj_sample.json  resourceloader.cpp  wavefrontutils.cpp
src/wolf/import/_3dformats/: _3dfileparser.cpp  file.cpp  mtlfileparser.cpp  objfileparser.cpp
src/wolf/import/resources/: resourceloader_json.cpp
src/wolf/resources/: resource.cpp  resourcefactory.cpp  resourcejson.cpp  resourcemanager.cpp  resourcemesh.cpp  resourcenameutils.cpp
src/wolf/resources/json/: resourcejson.cpp
